working summarize function

--- a/report.html
+++ b/report.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Sofiya Patra" />
+<meta name="author" content="Sofiya" />
 
 
 <title>Assignment: Base R</title>
@@ -350,7 +350,7 @@ display: none;
 
 
 <h1 class="title toc-ignore">Assignment: Base R</h1>
-<h4 class="author">Sofiya Patra</h4>
+<h4 class="author">Sofiya</h4>
 
 </div>
 
@@ -442,7 +442,7 @@ the <code>row_medians()</code> function.</p>
 # NB: simulate_gene_expression is defined in main.R
 gene_exp &lt;- simulate_gene_expression(num_samples=30, num_genes=10)
 row_medians(gene_exp)</code></pre>
-<pre><code>## NULL</code></pre>
+<pre><code>##  [1]   4.0   1.5 277.0 537.0   7.0   3.0   4.0  19.0 151.0   0.0</code></pre>
 </div>
 <div id="generalizing-row-wise-matrix-computations" class="section level2">
 <h2>5. Generalizing Row-wise Matrix Computations</h2>
